Wed Feb 14 23:05:16 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
        * ace/Service_Config.inl:
        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.cpp:

          Moved the ACE_Unmanaged_Singleton usage to the implementation
          file and eliminated the unnecesary #includes, aiming to reduce
          the footprint.

Wed Feb 14 19:56:14 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * ace/Service_Config.h:
          s/TAO_Export/ACE_Export/

Wed Feb 14 19:21:58 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added bug 2809 regression

Wed Feb 14 17:33:22 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
          Fixing a compile problem with g++ and borland compiler, which
          treat members of private nested classes as "hidden" even when
          the enclosing type has been exported.

Wed Feb 14 12:59:58 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.h:
          Doxygen improvement

Wed Feb 14 11:31:58 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_stdio.h:
        * ace/os_include/os_unistd.h:
          Move ACE_STDIN, ACE_STDOUT and ACE_STDERR from stdio to unistd
          file and use STDIN_FILENO, STDOUT_FILENO and STDERROR_FILENO if
          these are defined yet, this way we use the same defines and header
          files as in the posix specification. This fixes bugzilla bug 2731.
          Thanks to Abdul Sowayan <abdullah dot sowayan at lmco dot com>
          for reporting this.

        * ace/Truncate.h:
          Added another const specialization for Borland C++

Wed Feb 14 11:03:58 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Process_Manager_Test.cpp:
          Added test code from bugzilla 2797, thanks to Yves Alloyer
          <alloyer at ipanematech dot com> for reporting this.
