@@ -48,23 +48,4 @@ ACE_Service_Gestalt::open (int argc,
                          ignore_debug_flag);
 }
 
-/// Searches for a service object declaration in the local repo, only
-
-ACE_INLINE int
-ACE_Service_Gestalt::find (const ACE_TCHAR name[],
-                           const ACE_Service_Type **srp,
-                           int ignore_suspended) const
-{
-  // Closing the gestalt will have disassociated it from the
-  // repository. If the repository used to be owned by the gestalt, it
-  // will also have been destroyed - so just check for repo_ before
-  // doing anything with it.
-  if (this->repo_ != 0)
-    return this->repo_->find (name, srp, ignore_suspended);
-
-  return 0;
-}
-
-
-
 ACE_END_VERSIONED_NAMESPACE_DECL
